@@ -1,3 +1,12 @@
+2004-08-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b15
+
+	* Fix: Added a setup option for "slowPhotoCount".  The accurate photo count
+	  on the Gallery index page was a much requested change, however it proved to
+	  be so slow on some machines/Galleries that this will disable it unless
+	  explicitly enabled by the user during setup.  (Galleries with vast numbers
+	  of albums or images could take as long as 30 seconds to load the index, by
+	  user reports)
+
 2004-08-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b14
 
 	* Fix: Navigation bar width was dependant on whether images were resized or not...
